--- a/style.css
+++ b/style.css
@@ -2,3 +2,16 @@
     margin: 0;
     padding: 0;
 }
+
+body{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container{
+    height: 500px;
+    width: 50vw;
+    border: 1px solid black;
+}
