--- a/style.css
+++ b/style.css
@@ -14,4 +14,10 @@ body{
     height: 500px;
     width: 50vw;
     border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+}
+
+.input-container{
+  
 }
