--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ body{
     border-radius: 10px;
     box-shadow: 6px 6px 9px;
     position: relative;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 .title-form{
@@ -49,7 +51,7 @@ form .input-container .input-box{
 }
 
 form .input-container .input-box input{
-    margin-top: 20px;
+    margin-top: 15px;
     padding: 5px;
 }   
 
@@ -66,7 +68,13 @@ form .input-container .input-box label{
 }
 
 #submit{
-    padding: 5px;
-    width: 100px;
+    padding: 10px;
+    width: 100%;
+    margin-top: 15px;
+    border-radius: 8px;
+    color: rgb(46, 46, 46);
+    font-weight: 800;
+    font-size: 20px;
+    background-image: linear-gradient(var(--pink),var(--dark-pink));
 }
 
